[tool.poetry]
name = "nevua"
version = "0.0.1"
description = "Dashboards to analyze the spread of the novel coronavirus."
authors = ["JJ Ben-Joseph <opensource@tensorspace.ai>"]
license = "Apache"
repository = "https://www.github.com/jbenjoseph/nevua"
readme = "README.rst"
keywords = ["machine_learning", "artificial_intelligence", "dashboard", "forecasting"]
classifiers = [
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12"
dash = "*"
plotly = "*"
pandas = "*"
numpy = "<2.0"
pmdarima = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
uwsgi = "*"
sigopt = "*"

[tool.poetry.scripts]
nevua = "nevua.__main__:main"
